--- a/Wrapsy/app/src/main/res/layout/activity_order_details.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_order_details.xml
@@ -24,7 +24,7 @@
             android:background="@drawable/circleyellow"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_notificaciones"
+            android:src="@drawable/ic_shopping_basket"
             android:contentDescription="Shopping basket" />
 
         <ImageView
@@ -48,7 +48,7 @@
             android:layout_toStartOf="@id/menuIcon"
             android:layout_centerVertical="true"
             android:background="@drawable/circleyellow"
-            android:src="@drawable/ic_notificaciones"
+            android:src="@drawable/ic_tres_rayitas"
             android:contentDescription="Options" />
     </RelativeLayout>
 
@@ -105,9 +105,8 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_marginLeft="16dp"
-                    android:background="@drawable/circleblue"
                     android:padding="4dp"
-                    android:src="@drawable/ic_store" />
+                    android:src="@drawable/heisenberg_plush" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
