--- a/Wrapsy/app/src/main/res/layout/activity_reviews.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_reviews.xml
@@ -25,7 +25,7 @@
             android:background="@drawable/circleyellow"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_store"
+            android:src="@drawable/ic_shopping_basket"
             android:contentDescription="Shopping basket" />
 
         <ImageView
@@ -49,7 +49,7 @@
             android:layout_toStartOf="@id/menuIcon"
             android:layout_centerVertical="true"
             android:background="@drawable/circleyellow"
-            android:src="@drawable/ic_notificaciones"
+            android:src="@drawable/ic_tres_rayitas"
             android:contentDescription="Menu" />
     </RelativeLayout>
 
@@ -99,7 +99,7 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginStart="16dp"
-                android:src="@drawable/ic_store" />
+                android:src="@drawable/heisenberg_plush" />
 
             <LinearLayout
                 android:layout_width="match_parent"
