--- a/Wrapsy/app/src/main/res/layout/activity_plantilla_store.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_plantilla_store.xml
@@ -5,10 +5,10 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cremaPalido"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".RecommendedGiftsActivity">
+    android:background="@color/cremaPalido"
+    tools:context=".PlantillaStoreActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_weight="1"
@@ -34,10 +34,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Recommended gifts"
+                android:text="Details"
                 android:textColor="@color/dark_green"
                 android:textSize="24sp"
                 android:textStyle="bold" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/editTextText"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:padding="3dp"
+                android:background="@color/white"
+                android:hint="Search"
+                android:inputType="text"
+                android:drawableEnd="@drawable/ic_search"
+                 />
+
         </LinearLayout>
 
         <GridView
@@ -47,6 +63,8 @@
             android:numColumns="2"
             android:layout_marginTop="18dp"
             android:paddingHorizontal="6dp"/>
+
+
 
     </LinearLayout>
 
