--- a/Wrapsy/app/src/main/res/layout/activity_stores.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_stores.xml
@@ -19,7 +19,46 @@
             android:layout_height="0dp"
             android:orientation="vertical">
 
-            <!--Contenido-->
+            <!--Menu de arriba bien insano-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/btn_basket"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/circleyellow"
+                    android:src="@drawable/ic_shopping_basket"
+                    android:scaleType="center"
+                    android:layout_margin="8dp"/>
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
+
+                <ImageButton
+                    android:id="@+id/btn_tres_rayitas"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/circleyellow"
+                    android:src="@drawable/ic_tres_rayitas"
+                    android:scaleType="center"
+                    android:layout_margin="8dp"
+                    />
+
+                <ImageButton
+                    android:id="@+id/btn_notificaciones"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/circleyellow"
+                    android:src="@drawable/ic_notificaciones"
+                    android:scaleType="fitCenter"
+                    android:padding="5dp"
+                    android:layout_margin="8dp"/>
+            </LinearLayout>
 
         </LinearLayout>
 
