--- a/Wrapsy/app/src/main/res/layout/activity_coupons.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_coupons.xml
@@ -64,269 +64,13 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp" />
 
-    <GridLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/couponsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:columnCount="2"
-        android:rowCount="2"
-        android:padding="8dp"
-        android:useDefaultMargins="true">
+        android:padding="8dp" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/freeDeliveryCoupon"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:clickable="true"
-            android:focusable="true"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="2dp"
-            app:cardBackgroundColor="@color/pistache">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Free delivery"
-                    android:layout_marginTop="20dp"
-                    android:textSize="20sp"
-                    android:layout_gravity="center"
-                    android:textStyle="bold"
-                    android:textColor="#FFFFFF" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text='Get free shipping \n on your purchase!'
-                    android:textSize="12sp"
-                    android:layout_gravity="center"
-                    android:textColor="#FFFFFF"/>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_gravity="center">
-
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/didi_envios_apurado"
-                        android:contentDescription="Delivery" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Expires on April 15th"
-                    android:textSize="10sp"
-                    android:textColor="#FFFFFF"
-                    android:layout_gravity="center" />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/plushies"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:clickable="true"
-            android:focusable="true"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="2dp"
-            app:cardBackgroundColor="@color/cremaPalido">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Plush"
-                    android:layout_marginTop="20dp"
-                    android:textSize="20sp"
-                    android:layout_gravity="center"
-                    android:textStyle="bold"
-                    android:textColor="@color/pistache" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text='Get 15% off your first \n plush purchase.'
-                    android:textSize="12sp"
-                    android:layout_gravity="center"
-                    android:textColor="@color/pistache"/>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_gravity="center">
-
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/ic_plushtoy"
-                        android:contentDescription="Delivery" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/purchase10"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:clickable="true"
-            android:focusable="true"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="2dp"
-            app:cardBackgroundColor="@color/cremaPalido">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Purchase"
-                    android:layout_marginTop="20dp"
-                    android:textSize="20sp"
-                    android:layout_gravity="center"
-                    android:textStyle="bold"
-                    android:textColor="@color/pistache" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text='Get 10% off your entire \n purchase of $100 or \n more.'
-                    android:textSize="12sp"
-                    android:layout_gravity="center"
-                    android:textColor="@color/pistache"/>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_gravity="center">
-
-                    <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:src="@drawable/carrito_verde"
-                        android:contentDescription="Delivery" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Expires on May 29th"
-                    android:textSize="10sp"
-                    android:textColor="@color/pistache"
-                    android:layout_gravity="center" />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/purchase25"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:clickable="true"
-            android:focusable="true"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="2dp"
-            app:cardBackgroundColor="@color/pistache">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Purchase"
-                    android:layout_marginTop="20dp"
-                    android:textSize="20sp"
-                    android:layout_gravity="center"
-                    android:textStyle="bold"
-                    android:textColor="#FFFFFF" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text='Get 25% off your entire \n purchase of $500 or \n more.'
-                    android:textSize="12sp"
-                    android:layout_gravity="center"
-                    android:textColor="#FFFFFF"/>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_gravity="center">
-
-                    <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:src="@drawable/carrito_blanco"
-                        android:contentDescription="Delivery" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Expires on May 26th"
-                    android:textSize="10sp"
-                    android:textColor="#FFFFFF"
-                    android:layout_gravity="center" />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-
-    </GridLayout>
     <include
         layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
