--- a/Wrapsy/app/src/main/res/layout/activity_orders.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_orders.xml
@@ -6,13 +6,12 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="3dp"
     android:background="@color/cremaPalido"
     tools:context=".OrdersActivity">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1">
 
         <LinearLayout
@@ -312,6 +311,7 @@
     <include
         layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 
 </LinearLayout>
