--- a/Wrapsy/app/src/main/res/layout/bottom_navigation.xml
+++ b/Wrapsy/app/src/main/res/layout/bottom_navigation.xml
@@ -4,12 +4,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottom_navigation"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:layout_gravity="bottom"
-    android:background="@color/pistache"
+    android:background="@drawable/bottom_nav_background"
+    app:elevation="8dp"
     app:labelVisibilityMode="labeled"
     app:menu="@menu/navigation_menu"
-    app:elevation="8dp"
-    app:itemTextColor="@color/bottom_nav_color_selector"
-    app:itemIconTint="@color/bottom_nav_color_selector"
-    app:itemIconSize="40dp"/>
+    app:itemTextAppearanceActive="@style/BottomNavTextActive"
+    app:itemTextAppearanceInactive="@style/BottomNavTextInactive"
+    app:itemIconTint="@drawable/bottom_nav_icon_tint"
+    app:itemTextColor="@drawable/bottom_nav_text_color"
+    app:itemIconSize="24dp"
+    app:itemPaddingBottom="15dp"
+    app:itemPaddingTop="15dp"
+    app:itemRippleColor="@android:color/transparent" />
