--- a/Wrapsy/app/src/main/res/menu/navigation_menu.xml
+++ b/Wrapsy/app/src/main/res/menu/navigation_menu.xml
@@ -12,7 +12,7 @@
 
     <item
         android:id="@+id/nav_coupons"
-        android:icon="@drawable/ic_coupon"
+        android:icon="@drawable/ic_coupons"
         android:title="Coupons"/>
 
     <item
